keycloak/resources/deploymentconfig.yaml
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      application: keycloak 
    name: keycloak
  spec:
    replicas: 1
    selector:
      deploymentConfig: keycloak
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          application: keycloak
          deploymentConfig: keycloak
        name: keycloak
      spec:
        containers:
          - env:
              - name: KEYCLOAK_USER
                value: user
              - name: KEYCLOAK_PASSWORD
                value: password
              - name: DB_VENDOR
                value: H2
              - name: JGROUPS_DISCOVERY_PROTOCOL
                value: dns.DNS_PING
              - name: JGROUPS_DISCOVERY_PROPERTIES
                value: 'dns_query=keycloak.keycloak.svc.cluster.local'
            image: quay.io/keycloak/keycloak:11.0.2
            livenessProbe:
              failureThreshold: 3
              httpGet:
                path: /auth/realms/master
                port: 8080
                scheme: HTTP
              initialDelaySeconds: 60
            name: keycloak
            ports:
              - containerPort: 8080
                protocol: TCP
              - containerPort: 8443
                name: https
                protocol: TCP
            readinessProbe:
              failureThreshold: 10
              httpGet:
                path: /auth/realms/master
                port: 8080
                scheme: HTTP
              initialDelaySeconds: 30
            securityContext:
              privileged: false
    triggers:
      - type: ConfigChange
