keycloak/resources/service.yaml
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The web server's https port.
    labels:
      application: keycloak 
    name: keycloak
    namespace: keycloak
  spec:
    ports:
      - port: 8443
        targetPort: 8443
    selector:
      deploymentConfig: keycloak
