keycloak/resources/route.yaml
---
apiVersion: v1
kind: Route
metadata:
  annotations:
    description: Route for application's https service.
  labels:
    application: keycloak
  name: keycloak
  namespace: keycloak
spec:
  tls:
    termination: passthrough
  to:
    name: keycloak
